<resources>
    <string name="app_name">ProyectoPrueba</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Buscar</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Sitios</string>
    <string name="menu_slideshow">Hoteles</string>
    <string name="menu_tools">Restaurantes</string>
    <string name="menu_share">Sugerir Lugares</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="info">Con esta App te ayudaremos a encontrar sitio que te puden interesar</string>
    <string name="ag">Agregar:</string>
    <string name="toma">Añadir Fotografia</string>
    <string name="n">Nombre del sitio</string>
    <string name="des">Descripcion Breve</string>
    <string name="ubi">Ubicacion</string>
    <string name="reg">Registrar</string>
    <string name="act">Actualizar</string>
    <string name="el">Eliminar</string>

    <string-array name="campos">
        <item>Sitio</item>
        <item>Restaurante</item>
        <item>Hotel</item>
    </string-array>
</resources>
